VP 10.4.0 Changelog
------------------------
- add Rotate/Scale around origin option to the rotate/scale dialog. Simply uncheck "Rotate around origin" or "Scale around origin" to rotate/scale around the mouse position.
  To use the current mouse position as rotate/scale reference use the following workflow:
  1) select the element you want to rotate/scale
  2) place the mouse cursor where the origin should be
  3) press the context menu key on your keyboard (the one between "Alt Gr" and right "Ctrl") and select "Rotate" or "Scale"
  4) uncheck the "Rotate/Scale around origin" and start the operation

- add "In Use" column to the material manager dialog

- let user change the scatter angle for bumpers in the editor

- fix missing kicker holes at inclination values close around 0

- added a new column for the image manager to show the raw size in bytes for each image.

- new table extended by a stripped down version of the default table and an updated example table. (thanks BorgDog and Hauntfreaks)

- a selected element can be added/removed to/from a collection via the context menu

- drop target hit event problems fixed

- add additional thickness parameter to (transparent) materials, which interacts with the standard amount (and/or alpha channel of the image) and edge opacity to provide a more natural look

- add (optional) legacy/VP9-like keyboard nudging code, can be enabled in the 'Keys, Nudge and DOF' preferences dialog

- add internal/rudimentary GPU & table element profiling functionality (accessed as usual via the F11 statistics/debug info display variants)
  the normal statistics/debug info display now features multiple modes, the first mode works as before,
  the second features additional timings for each main rendering block (like timings for Ambient Occlusion, pure rendering of the table elements, playfield reflection, etc),